# RaspberryPico

./: README.md
Chapitre001/: texte.md
Chapitre001/P1/: CMakeLists.txt  hello_usb.c  testPico1.s  texte.md
Chapitre001/P1A/: CMakeLists.txt  testPico1A.s
Chapitre001/P1B/: CMakeLists.txt  routinesGpio.c  testPico2.s  texte.md
Chapitre001/P1C/: CMakeLists.txt  testPico2C.s  texte.md
Chapitre002/: texte.md
Chapitre002/P1/: CMakeLists.txt  testPico3.s  texte.md
Chapitre002/P2/: CMakeLists.txt  testPico4A.s  texte.md
Chapitre003/: texte.md
Chapitre003/P1/: CMakeLists.txt  testPico5A.s  texte.md
Chapitre003/P2/: CMakeLists.txt  testPico8.s  texte.md
Chapitre004/: texte.md
Chapitre004/P1/: testPico8.s  texte.md
Chapitre005/: texte.md
Chapitre005/P1/: CMakeLists.txt  constantesPico.inc  routinesPico.s  testPico10.s  texte.md
Chapitre006/: routinesPico.s  testPico9.s  texte.md
Chapitre006/P1/: CMakeLists.txt  routinesPico.s  texte.md
Chapitre006/P2/: CMakeLists.txt  testPico9C.s  texte.md
Chapitre007/: texte.md
Chapitre008/: CMakeLists.txt  constantesPico.inc  readme.md  testPico12.s
Chapitre009/: CMakeLists.txt  readme.md  routinesPico.s  testPico11.s
Chapitre010/: CMakeLists.txt  readme.md  testPico21.s
Chapitre011/: Makefile  blinkA11.s  memmap.ld  readme.md
Chapitre012/: Makefile  blinkA12.s  memmap.ld  readme.md
Chapitre013/: Makefile  dev_lowlevel_loopback1.py  readme.md  routinesPicoARM.s  routinesUSB.s  testPico16K.s
Chapitre014/: Makefile  constantesPico.inc  readme.md  routinesPicoARM.s  routinesUSBCDC.s  testPico16L.s
Chapitre015/: Makefile  affFloatA.s  constantesPico.inc  readme.md  routinesPicoARM.s
Chapitre016/: Makefile  memmap.ld  mesureC.s  readme.md  routinesUSBCDC.s
Chapitre017/: Makefile  constantesPico.inc  readme.md  routineConvFloat.s  routinesMulticore.s  routinesMulticoreB.s  routinesPicoARM.s  routinesUSBCDC.s  testCore1A.s
Chapitre017/readme/: md
Chapitre018/: CMakeLists.txt  lwipopts.h  readme.rd  serveurWifiAsm.s
Chapitre019/: CMakeLists.txt  lwipopts.h  pgmTelnetAsm.s  readme.md
Chapitre020/: CMakeLists.txt  constantesPico.inc  descStruct.inc  execlibX11Asm.s  ficmacros.inc  lwipopts.h  readme.md  routinesPicoARM.s  x11libpico.inc  x11libpico.s
Special/: CMakeLists.txt  constantesPico.inc  readme.md  routinesPico.s  testPico24A.s
chapitre019/: readme.md
